--- a/Hippo/Internal Classes/Views/CustomerPaymentCell/CustomerPaymentCardCell.xib
+++ b/Hippo/Internal Classes/Views/CustomerPaymentCell/CustomerPaymentCardCell.xib
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -14,7 +16,7 @@
             <rect key="frame" x="0.0" y="0.0" width="325" height="264"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="325" height="264"/>
+                <rect key="frame" x="0.0" y="0.0" width="325" height="263.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RaD-Bf-72h">
@@ -59,7 +61,7 @@
                                                 </subviews>
                                             </stackView>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstItem="z4l-HK-5h3" firstAttribute="leading" secondItem="yGP-I5-2nD" secondAttribute="leading" id="BKU-03-W3f"/>
                                             <constraint firstItem="z4l-HK-5h3" firstAttribute="top" secondItem="yGP-I5-2nD" secondAttribute="top" id="LhG-vg-ObH"/>
@@ -68,7 +70,7 @@
                                         </constraints>
                                     </view>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="yGP-I5-2nD" firstAttribute="top" secondItem="8kR-n8-NbJ" secondAttribute="top" constant="10" id="0fK-rj-sGm"/>
                                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="CnD-qr-4zT" secondAttribute="bottom" id="8N5-HS-380"/>
@@ -83,7 +85,7 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="8kR-n8-NbJ" firstAttribute="leading" secondItem="RaD-Bf-72h" secondAttribute="leading" constant="10" id="1fi-AS-xeg"/>
                             <constraint firstItem="8kR-n8-NbJ" firstAttribute="top" secondItem="RaD-Bf-72h" secondAttribute="top" constant="10" id="Nut-T8-0Nc"/>
@@ -95,7 +97,7 @@
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="RaD-Bf-72h" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="A4b-8I-cFT"/>
-                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="RaD-Bf-72h" secondAttribute="bottom" constant="10" id="Hqr-1m-Rsp"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="RaD-Bf-72h" secondAttribute="bottom" id="Hqr-1m-Rsp"/>
                     <constraint firstItem="RaD-Bf-72h" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="XNN-RM-q0V"/>
                     <constraint firstAttribute="trailing" secondItem="RaD-Bf-72h" secondAttribute="trailing" constant="15" id="nCf-gm-0Eh"/>
                 </constraints>
