--- a/Hippo/UIView/TableViewCell/AssignedAgentTableViewCell/AssignedAgentTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/AssignedAgentTableViewCell/AssignedAgentTableViewCell.xib
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="AssignedAgentTableViewCell" customModule="Hippo" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="AssignedAgentTableViewCell" customModule="HippoChat" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -28,12 +28,24 @@
                                     <constraint firstAttribute="height" constant="1" id="hgm-qt-Aiv"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C63-mc-wYg">
-                                <rect key="frame" x="139" y="5" width="42" height="33.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8i8-tb-MaE">
+                                <rect key="frame" x="134" y="5" width="52" height="33.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C63-mc-wYg">
+                                        <rect key="frame" x="5" y="3" width="42" height="27.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="C63-mc-wYg" secondAttribute="trailing" constant="5" id="4pg-mw-kcg"/>
+                                    <constraint firstItem="C63-mc-wYg" firstAttribute="leading" secondItem="8i8-tb-MaE" secondAttribute="leading" constant="5" id="WbK-xi-IIA"/>
+                                    <constraint firstAttribute="bottom" secondItem="C63-mc-wYg" secondAttribute="bottom" constant="3" id="nQY-hF-8LY"/>
+                                    <constraint firstItem="C63-mc-wYg" firstAttribute="top" secondItem="8i8-tb-MaE" secondAttribute="top" constant="3" id="sdm-Jp-OTL"/>
+                                </constraints>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4yO-ei-uZR" userLabel="RightHorizontal">
                                 <rect key="frame" x="186" y="21.5" width="134" height="1"/>
                                 <color key="backgroundColor" red="0.91764705879999997" green="0.91764705879999997" blue="0.91764705879999997" alpha="1" colorSpace="calibratedRGB"/>
@@ -44,15 +56,15 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="C63-mc-wYg" firstAttribute="leading" secondItem="jY3-4z-hWf" secondAttribute="trailing" constant="5" id="24z-Mt-sIC"/>
                             <constraint firstItem="4yO-ei-uZR" firstAttribute="width" secondItem="jY3-4z-hWf" secondAttribute="width" id="7SP-zY-neW"/>
-                            <constraint firstAttribute="bottom" secondItem="C63-mc-wYg" secondAttribute="bottom" constant="5" id="D2C-5n-Coc"/>
-                            <constraint firstItem="C63-mc-wYg" firstAttribute="top" secondItem="Drg-kU-wPe" secondAttribute="top" constant="5" id="Og3-Rg-nhn"/>
+                            <constraint firstItem="8i8-tb-MaE" firstAttribute="leading" secondItem="jY3-4z-hWf" secondAttribute="trailing" id="Jjo-2v-dr6"/>
                             <constraint firstItem="4yO-ei-uZR" firstAttribute="centerY" secondItem="Drg-kU-wPe" secondAttribute="centerY" id="S7c-TS-gPK"/>
                             <constraint firstItem="jY3-4z-hWf" firstAttribute="leading" secondItem="Drg-kU-wPe" secondAttribute="leading" id="Tpb-Mz-Zbm"/>
-                            <constraint firstItem="4yO-ei-uZR" firstAttribute="leading" secondItem="C63-mc-wYg" secondAttribute="trailing" constant="5" id="Wyq-Kw-EkO"/>
+                            <constraint firstItem="4yO-ei-uZR" firstAttribute="leading" secondItem="8i8-tb-MaE" secondAttribute="trailing" id="V6W-ls-BRC"/>
                             <constraint firstAttribute="trailing" secondItem="4yO-ei-uZR" secondAttribute="trailing" id="fad-kW-zMh"/>
                             <constraint firstItem="jY3-4z-hWf" firstAttribute="centerY" secondItem="Drg-kU-wPe" secondAttribute="centerY" id="hgc-RW-AQn"/>
+                            <constraint firstAttribute="bottom" secondItem="8i8-tb-MaE" secondAttribute="bottom" constant="5" id="qFe-U8-ZIw"/>
+                            <constraint firstItem="8i8-tb-MaE" firstAttribute="top" secondItem="Drg-kU-wPe" secondAttribute="top" constant="5" id="qrK-v0-bH6"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -64,8 +76,10 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="messageContainer" destination="8i8-tb-MaE" id="Kf4-fl-k31"/>
                 <outlet property="messageLabel" destination="C63-mc-wYg" id="Klz-P1-YTW"/>
             </connections>
+            <point key="canvasLocation" x="137.59999999999999" y="154.72263868065968"/>
         </tableViewCell>
     </objects>
 </document>
