--- a/Hippo/UIView/TableViewCell/LeadDataCell/LeadDataTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/LeadDataCell/LeadDataTableViewCell.xib
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="LeadDataTableViewCell" rowHeight="107" id="KGk-i7-Jjw" customClass="LeadDataTableViewCell" customModule="Hippo" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="LeadDataTableViewCell" rowHeight="107" id="KGk-i7-Jjw" customClass="LeadDataTableViewCell" customModule="HippoChat" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="397" height="107"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -65,7 +64,7 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kU3-po-xoM">
-                                        <rect key="frame" x="344" y="0.5" width="37" height="37"/>
+                                        <rect key="frame" x="344" y="0.0" width="37" height="37"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="kU3-po-xoM" secondAttribute="height" id="bFJ-ZJ-OYg"/>
                                         </constraints>
@@ -86,8 +85,8 @@
                                     <constraint firstAttribute="bottom" secondItem="u7J-TA-5G1" secondAttribute="bottom" id="r6s-fN-HgQ"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This field is required." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6MO-4x-sa9">
-                                <rect key="frame" x="0.0" y="64.5" width="108.5" height="13.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This field is required." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="6MO-4x-sa9">
+                                <rect key="frame" x="0.0" y="64.5" width="381" height="13.5"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="11"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -98,7 +97,9 @@
                             <constraint firstItem="Sjk-z9-QKg" firstAttribute="top" secondItem="2Mp-ai-p05" secondAttribute="bottom" constant="5" id="079-Z6-EdF"/>
                             <constraint firstItem="6MO-4x-sa9" firstAttribute="leading" secondItem="AjU-g1-0Dr" secondAttribute="leading" id="EHP-Wb-SrU"/>
                             <constraint firstAttribute="trailing" secondItem="2Mp-ai-p05" secondAttribute="trailing" id="LPp-F2-xjM"/>
+                            <constraint firstAttribute="trailing" secondItem="6MO-4x-sa9" secondAttribute="trailing" id="Pu5-oE-VgA"/>
                             <constraint firstItem="6MO-4x-sa9" firstAttribute="top" secondItem="Sjk-z9-QKg" secondAttribute="bottom" constant="2.5" id="WUI-oi-2XH"/>
+                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="6MO-4x-sa9" secondAttribute="bottom" constant="2" id="oC2-gF-nWY"/>
                             <constraint firstItem="2Mp-ai-p05" firstAttribute="top" secondItem="AjU-g1-0Dr" secondAttribute="top" id="sqN-rp-Ewe"/>
                             <constraint firstAttribute="trailing" secondItem="Sjk-z9-QKg" secondAttribute="trailing" id="sxf-m8-VpI"/>
                             <constraint firstItem="Sjk-z9-QKg" firstAttribute="leading" secondItem="AjU-g1-0Dr" secondAttribute="leading" id="xHh-ZY-zh7"/>
@@ -127,6 +128,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="tick_green" width="42" height="42"/>
+        <image name="tick_green" width="42.5" height="42.5"/>
     </resources>
 </document>
