--- a/Hippo/UIView/TableViewCell/SupportMessageTableViewCell/SupportMessageTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/SupportMessageTableViewCell/SupportMessageTableViewCell.xib
@@ -11,19 +11,19 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SupportMessageTableViewCell" rowHeight="270" id="bH2-JR-QHO" customClass="SupportMessageTableViewCell" customModule="Hippo" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SupportMessageTableViewCell" rowHeight="270" id="bH2-JR-QHO" customClass="SupportMessageTableViewCell" customModule="HippoChat" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="270"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bH2-JR-QHO" id="uCR-8L-K0b">
                 <rect key="frame" x="0.0" y="0.0" width="375" height="269.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y0x-5w-qls" customClass="So_UIView" customModule="Hippo" customModuleProvider="target">
-                        <rect key="frame" x="45" y="1.5" width="65" height="62.5"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y0x-5w-qls" customClass="So_UIView" customModule="HippoChat" customModuleProvider="target">
+                        <rect key="frame" x="43.5" y="1.5" width="65" height="60.5"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RFF-lq-dWC">
-                        <rect key="frame" x="46.5" y="3" width="62" height="59.5"/>
+                        <rect key="frame" x="45" y="3" width="62" height="57.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Pd-1R-qeY">
                                 <rect key="frame" x="30" y="40.5" width="27" height="12"/>
@@ -34,6 +34,11 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                 <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="FzE-wa-Yuw"/>
+                                    </mask>
+                                </variation>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="wh8-HF-jZb">
                                 <rect key="frame" x="10" y="5" width="47" height="33"/>
@@ -47,21 +52,21 @@
                             <constraint firstItem="wh8-HF-jZb" firstAttribute="top" secondItem="RFF-lq-dWC" secondAttribute="top" constant="5" id="3gf-2W-NbD"/>
                             <constraint firstAttribute="trailing" secondItem="6Pd-1R-qeY" secondAttribute="trailing" constant="5" id="GEq-2U-S35"/>
                             <constraint firstAttribute="trailing" secondItem="wh8-HF-jZb" secondAttribute="trailing" constant="5" id="Hb9-Ba-ebA"/>
-                            <constraint firstAttribute="bottom" secondItem="6Pd-1R-qeY" secondAttribute="bottom" constant="7" id="TNt-Oh-fP0"/>
+                            <constraint firstAttribute="bottom" secondItem="6Pd-1R-qeY" secondAttribute="bottom" constant="5" id="TNt-Oh-fP0"/>
                             <constraint firstItem="wh8-HF-jZb" firstAttribute="leading" secondItem="RFF-lq-dWC" secondAttribute="leading" constant="10" id="jKl-ER-42R"/>
                             <constraint firstItem="6Pd-1R-qeY" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="RFF-lq-dWC" secondAttribute="leading" constant="30" id="tge-YX-D4i"/>
                             <constraint firstItem="6Pd-1R-qeY" firstAttribute="top" secondItem="wh8-HF-jZb" secondAttribute="bottom" constant="2.5" id="vEv-NC-igi"/>
                         </constraints>
                     </view>
                     <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aaa-iX-koP">
-                        <rect key="frame" x="108.5" y="37.5" width="25" height="25"/>
+                        <rect key="frame" x="107" y="35.5" width="25" height="25"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="25" id="CjB-J5-0Zt"/>
                             <constraint firstAttribute="width" secondItem="aaa-iX-koP" secondAttribute="height" multiplier="1:1" id="XhK-Ip-cuE"/>
                         </constraints>
                     </imageView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yCk-vg-WaF">
-                        <rect key="frame" x="10" y="32.5" width="30" height="30"/>
+                        <rect key="frame" x="10" y="30.5" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="KcF-sD-6Ms"/>
                             <constraint firstAttribute="width" secondItem="yCk-vg-WaF" secondAttribute="height" multiplier="1:1" id="nZB-TO-IzL"/>
@@ -71,7 +76,6 @@
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="RFF-lq-dWC" secondAttribute="trailing" constant="60" id="6DR-L3-Cgb"/>
-                    <constraint firstItem="y0x-5w-qls" firstAttribute="leading" secondItem="yCk-vg-WaF" secondAttribute="trailing" constant="5" id="F7I-iO-Peu"/>
                     <constraint firstItem="aaa-iX-koP" firstAttribute="bottom" secondItem="RFF-lq-dWC" secondAttribute="bottom" id="NBA-M9-2TG"/>
                     <constraint firstItem="y0x-5w-qls" firstAttribute="bottom" secondItem="RFF-lq-dWC" secondAttribute="bottom" constant="1.5" id="QHb-0u-UGp"/>
                     <constraint firstItem="yCk-vg-WaF" firstAttribute="leading" secondItem="uCR-8L-K0b" secondAttribute="leading" constant="10" id="R3c-wu-nBj"/>
@@ -79,6 +83,7 @@
                     <constraint firstItem="y0x-5w-qls" firstAttribute="top" secondItem="RFF-lq-dWC" secondAttribute="top" constant="-1.5" id="YR2-oe-vpy"/>
                     <constraint firstItem="y0x-5w-qls" firstAttribute="leading" secondItem="RFF-lq-dWC" secondAttribute="leading" constant="-1.5" id="Z3d-am-gjq"/>
                     <constraint firstItem="RFF-lq-dWC" firstAttribute="top" secondItem="uCR-8L-K0b" secondAttribute="top" constant="3" id="cId-bd-9fZ"/>
+                    <constraint firstItem="RFF-lq-dWC" firstAttribute="leading" secondItem="yCk-vg-WaF" secondAttribute="trailing" constant="5" id="emm-WA-g8k"/>
                     <constraint firstItem="aaa-iX-koP" firstAttribute="leading" secondItem="RFF-lq-dWC" secondAttribute="trailing" id="ilC-2u-jAJ"/>
                     <constraint firstItem="yCk-vg-WaF" firstAttribute="bottom" secondItem="RFF-lq-dWC" secondAttribute="bottom" id="vzv-Gs-RO0"/>
                 </constraints>
@@ -86,7 +91,7 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="bgView" destination="RFF-lq-dWC" id="vc6-Z7-0h6"/>
-                <outlet property="senderImageTraillingConstaints" destination="F7I-iO-Peu" id="F6T-YE-CH9"/>
+                <outlet property="senderImageTraillingConstaints" destination="emm-WA-g8k" id="lyG-Z4-ND1"/>
                 <outlet property="senderImageView" destination="yCk-vg-WaF" id="LTH-Q7-fxb"/>
                 <outlet property="senderImageWidthConstraint" destination="KcF-sD-6Ms" id="F6e-Y7-2JI"/>
                 <outlet property="shadowView" destination="y0x-5w-qls" id="gQ2-Lo-wFc"/>
