--- a/Hippo/Internal Classes/Views/MultipleSelectCell/MultipleSelectTableViewCell.xib
+++ b/Hippo/Internal Classes/Views/MultipleSelectCell/MultipleSelectTableViewCell.xib
@@ -23,7 +23,7 @@
                         <rect key="frame" x="10" y="10" width="311" height="89.5"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="radio_button_deactive" translatesAutoresizingMaskIntoConstraints="NO" id="IeQ-vi-E5w">
-                                <rect key="frame" x="10" y="32" width="22" height="25.5"/>
+                                <rect key="frame" x="10" y="34" width="22" height="22"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="22" id="tMb-gK-w0q"/>
                                 </constraints>
@@ -50,10 +50,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="qKH-rH-BQN" firstAttribute="leading" secondItem="IeQ-vi-E5w" secondAttribute="trailing" constant="10" id="3pm-0x-vLE"/>
-                            <constraint firstItem="IeQ-vi-E5w" firstAttribute="top" secondItem="pUp-om-cJ4" secondAttribute="top" constant="32" id="8yg-un-agj"/>
-                            <constraint firstItem="IeQ-vi-E5w" firstAttribute="centerY" secondItem="qKH-rH-BQN" secondAttribute="centerY" id="YOQ-No-5WS"/>
                             <constraint firstAttribute="bottom" secondItem="qKH-rH-BQN" secondAttribute="bottom" constant="5" id="com-y7-5O6"/>
                             <constraint firstAttribute="trailing" secondItem="qKH-rH-BQN" secondAttribute="trailing" constant="5" id="gUs-S7-v93"/>
+                            <constraint firstItem="IeQ-vi-E5w" firstAttribute="centerY" secondItem="6f2-jv-2gk" secondAttribute="centerY" id="ghd-oa-FhX"/>
                             <constraint firstItem="IeQ-vi-E5w" firstAttribute="leading" secondItem="pUp-om-cJ4" secondAttribute="leading" constant="10" id="iFs-wW-TC7"/>
                             <constraint firstItem="qKH-rH-BQN" firstAttribute="top" secondItem="pUp-om-cJ4" secondAttribute="top" constant="5" id="v6H-LB-z1r"/>
                         </constraints>
