--- a/Hippo/UIView/TableViewCell/PromotionTableViewCell/PromotionTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/PromotionTableViewCell/PromotionTableViewCell.xib
@@ -1,21 +1,78 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="PromotionTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="267" id="KGk-i7-Jjw" customClass="PromotionTableViewCell" customModule="HippoChat" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="267"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="266.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xud-Uu-5dH">
+                        <rect key="frame" x="5" y="5" width="310" height="256.5"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderImg" translatesAutoresizingMaskIntoConstraints="NO" id="B24-ZH-lMi">
+                                <rect key="frame" x="0.0" y="0.0" width="310" height="175"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="175" id="9F7-sk-WQP"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6S2-SK-Yv7">
+                                <rect key="frame" x="8" y="180" width="294" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P9E-VN-wq9">
+                                <rect key="frame" x="8" y="209" width="294" height="43"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="B24-ZH-lMi" firstAttribute="top" secondItem="Xud-Uu-5dH" secondAttribute="top" id="1SY-2q-622"/>
+                            <constraint firstItem="P9E-VN-wq9" firstAttribute="leading" secondItem="Xud-Uu-5dH" secondAttribute="leading" constant="8" id="60N-kq-Plg"/>
+                            <constraint firstItem="B24-ZH-lMi" firstAttribute="leading" secondItem="Xud-Uu-5dH" secondAttribute="leading" id="Gd7-eX-5J8"/>
+                            <constraint firstAttribute="trailing" secondItem="6S2-SK-Yv7" secondAttribute="trailing" constant="8" id="X1a-P9-mWu"/>
+                            <constraint firstAttribute="trailing" secondItem="B24-ZH-lMi" secondAttribute="trailing" id="lXU-Eb-wX2"/>
+                            <constraint firstAttribute="trailing" secondItem="P9E-VN-wq9" secondAttribute="trailing" constant="8" id="m9i-y8-SIC"/>
+                            <constraint firstAttribute="bottom" secondItem="P9E-VN-wq9" secondAttribute="bottom" constant="5" id="oP1-ia-gHv"/>
+                            <constraint firstItem="6S2-SK-Yv7" firstAttribute="top" secondItem="B24-ZH-lMi" secondAttribute="bottom" constant="5" id="oqg-sF-wuY"/>
+                            <constraint firstItem="6S2-SK-Yv7" firstAttribute="leading" secondItem="Xud-Uu-5dH" secondAttribute="leading" constant="8" id="pdx-LG-mYG"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="Xud-Uu-5dH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="4oz-jf-H1n"/>
+                    <constraint firstAttribute="trailing" secondItem="Xud-Uu-5dH" secondAttribute="trailing" constant="5" id="bjw-nx-Vap"/>
+                    <constraint firstAttribute="bottom" secondItem="Xud-Uu-5dH" secondAttribute="bottom" constant="5" id="fkN-Ct-mFU"/>
+                    <constraint firstItem="Xud-Uu-5dH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="ixl-fv-dmp"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="bgView" destination="Xud-Uu-5dH" id="cfS-wy-d66"/>
+                <outlet property="descriptionLabel" destination="P9E-VN-wq9" id="lcm-uo-xyc"/>
+                <outlet property="promotionImage" destination="B24-ZH-lMi" id="xUZ-Fm-Qa1"/>
+                <outlet property="promotionTitle" destination="6S2-SK-Yv7" id="m74-Kb-hQU"/>
+            </connections>
+            <point key="canvasLocation" x="137.68115942028987" y="181.13839285714286"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="placeholderImg" width="167" height="178"/>
+    </resources>
 </document>
